docs/tests/typing/good/testfile-subtype-1.cpp
#include <iostream>
int main() {
  int *s;
  s = NULL;
}
