docs/tests/typing/bad/testfile-arrow-1.cpp
int main() { 1->a; }
